--- a/index.html
+++ b/index.html
@@ -3,20 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="apple-touch-icon" sizes="180x180" href="./image/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./image/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./image/favicon-16x16.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./image/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./image/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./image/favicon-16x16.png"
+    />
     <link rel="manifest" href="./image/site.webmanifest" />
     <title>Ashok Choudhary</title>
     <link rel="stylesheet" href="style.css" />
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header">
-      <a href="#" class="logo">Ashok.<span class="animate" style="--i: 1"></span></a>
+      <a href="#" class="logo"
+        >Ashok.<span class="animate" style="--i: 1"></span
+      ></a>
 
       <div class="nav_right_section">
-        <div class="bx bx-menu" id="menu-icon"><span class="animate" style="--i: 1"></span></div>
+        <div class="bx bx-menu" id="menu-icon">
+          <span class="animate" style="--i: 1"></span>
+        </div>
         <nav class="navbar">
           <a href="#home" class="active">Home</a>
           <a href="#about">About</a>
@@ -40,15 +61,19 @@
 
     <section class="home show-animate" id="home">
       <div class="home-content">
-        <h1>Hi,I'm <span>Ashok Choudhary</span><span class="animate" style="--i: 2"></span></h1>
+        <h1>
+          Hi,I'm <span>Ashok Choudhary</span
+          ><span class="animate" style="--i: 2"></span>
+        </h1>
         <div class="text-animate">
           <h3>Full Stact Developer</h3>
           <span class="animate" style="--i: 3"></span>
         </div>
 
         <p>
-          Hello, I am Ashok Choudhary, and welcome to my portfolio website! I'm a passionate full-stack developer with
-          an insatiable appetite for learning and exploring new technologies.<span
+          Hello, I am Ashok Choudhary, and welcome to my portfolio website! I'm
+          a passionate full-stack developer with an insatiable appetite for
+          learning and exploring new technologies.<span
             class="animate"
             style="--i: 4"
           ></span>
@@ -71,17 +96,25 @@
         </div>
       </div>
       <div class="home-sci">
-        <a href="https://www.instagram.com/im_ashok__choudhary/" target="_blank"><i class="bx bxl-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/ashok-choudhary-313213257/" target="_blank"
+        <a href="https://www.instagram.com/im_ashok__choudhary/" target="_blank"
+          ><i class="bx bxl-instagram"></i
+        ></a>
+        <a
+          href="https://www.linkedin.com/in/ashok-choudhary-313213257/"
+          target="_blank"
           ><i class="bx bxl-linkedin-square" target="_blank"></i
         ></a>
-        <a href="https://github.com/Ashoka2002" target="_blank"><i class="bx bxl-github"></i></a>
+        <a href="https://github.com/Ashoka2002" target="_blank"
+          ><i class="bx bxl-github"></i
+        ></a>
         <span class="animate" style="--i: 6"></span>
       </div>
     </section>
 
     <section class="about" id="about">
-      <h2 class="heading">About<span>Me</span><span class="animate scroll" style="--i: 1"></span></h2>
+      <h2 class="heading">
+        About<span>Me</span><span class="animate scroll" style="--i: 1"></span>
+      </h2>
 
       <div class="about-img">
         <!-- <img
@@ -94,12 +127,17 @@
       </div>
 
       <div class="about-content">
-        <h3>Full-stack Developer! <span class="animate scroll" style="--i: 3"></span></h3>
+        <h3>
+          Full-stack Developer!
+          <span class="animate scroll" style="--i: 3"></span>
+        </h3>
         <p>
-          I am a dedicated Full Stack Web Developer, driven by a relentless desire to enhance my skills through
-          teamwork. Crafting beautiful websites is not just my profession, but my passion. I'm committed to delivering
-          my very best in every project because, in this field, I find the canvas to express my creativity. Let's embark
-          on a journey of innovation together.
+          I am a dedicated Full Stack Web Developer, driven by a relentless
+          desire to enhance my skills through teamwork. Crafting beautiful
+          websites is not just my profession, but my passion. I'm committed to
+          delivering my very best in every project because, in this field, I
+          find the canvas to express my creativity. Let's embark on a journey of
+          innovation together.
           <span class="animate scroll" style="--i: 4"></span>
         </p>
 
@@ -111,41 +149,60 @@
     </section>
 
     <section class="education" id="education">
-      <h2 class="heading">My <span>Journey</span><span class="animate scroll" style="--i: 1"></span></h2>
+      <h2 class="heading">
+        My <span>Journey</span
+        ><span class="animate scroll" style="--i: 1"></span>
+      </h2>
 
       <div class="education-row">
         <div class="education-column">
-          <h3 class="title">Education<span class="animate scroll" style="--i: 2"></span></h3>
+          <h3 class="title">
+            Education<span class="animate scroll" style="--i: 2"></span>
+          </h3>
 
           <div class="education-box">
             <div class="education-content">
               <div class="content">
-                <div class="year"><i class="bx bxs-calendar"></i> 2019 - 2020</div>
-                <h3>Rana Royals Shikshan Sansthan Sr Sec School, Borawar (2020)</h3>
+                <div class="year">
+                  <i class="bx bxs-calendar"></i> 2019 - 2020
+                </div>
+                <h3>
+                  Rana Royals Shikshan Sansthan Sr Sec School, Borawar (2020)
+                </h3>
                 <p>
-                  I completed my 12th grade from Rana Royals Shikshan Sansthan Sr Sec School in the year 2020. My focus
-                  was on the science-mathematics stream, where I pursued a balanced academic journey, striving to
-                  achieve my best.
+                  I completed my 12th grade from Rana Royals Shikshan Sansthan
+                  Sr Sec School in the year 2020. My focus was on the
+                  science-mathematics stream, where I pursued a balanced
+                  academic journey, striving to achieve my best.
                 </p>
               </div>
             </div>
 
             <div class="education-content">
               <div class="content">
-                <div class="year"><i class="bx bxs-calendar"></i> 2020 - 2023</div>
+                <div class="year">
+                  <i class="bx bxs-calendar"></i> 2020 - 2023
+                </div>
                 <h3>Adarsh College, Kuchaman City (2023)</h3>
-                <p>In 2023, I successfully earned my Bachelor of Science degree from Adarsh College, Kuchaman City.</p>
+                <p>
+                  In 2023, I successfully earned my Bachelor of Science degree
+                  from Adarsh College, Kuchaman City.
+                </p>
               </div>
             </div>
 
             <div class="education-content">
               <div class="content">
-                <div class="year"><i class="bx bxs-calendar"></i> 2022 - 2023</div>
+                <div class="year">
+                  <i class="bx bxs-calendar"></i> 2022 - 2023
+                </div>
                 <h3>Online Full Stack Development Course on Udemy</h3>
                 <p>
-                  Following my formal education, I embarked on a self-driven journey of learning Full Stack Development
-                  through an online course on Udemy. This course was instrumental in broadening my knowledge of web
-                  development, equipping me with immense skills and expertise in this dynamic field.
+                  Following my formal education, I embarked on a self-driven
+                  journey of learning Full Stack Development through an online
+                  course on Udemy. This course was instrumental in broadening my
+                  knowledge of web development, equipping me with immense skills
+                  and expertise in this dynamic field.
                 </p>
               </div>
             </div>
@@ -233,7 +290,10 @@
     <!-- ========================================================== -->
 
     <section class="skills" id="skills">
-      <h2 class="heading">My <span>Skills</span> <span class="animate scroll" style="--i: 1"></span></h2>
+      <h2 class="heading">
+        My <span>Skills</span>
+        <span class="animate scroll" style="--i: 1"></span>
+      </h2>
 
       <div class="skills-row">
         <div class="skills-column">
@@ -351,8 +411,14 @@
 
     <script src="config.js"></script>
     <script defer src="script.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <script type="text/javascript" src="vanilla-tilt.js"></script>
   </body>
 </html>
