--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
         <label id="darkmode">
           <input type="checkbox" id="appearance" />
-          <ion-icon name="sunny" class="moon"></ion-icon>
-          <ion-icon name="moon" class="sun"></ion-icon>
+          <ion-icon name="sunny" class="sun"></ion-icon>
+          <ion-icon name="moon" class="moon"></ion-icon>
           <span class="toggle"></span>
           <span class="animateBg"></span>
         </label>
