--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
       <div class="about-content">
         <h3>
-          Full-stack Developer!
+          Full-stack Developer
           <span class="animate scroll" style="--i: 3"></span>
         </h3>
         <p>
