adding latest resume

--- a/index.html
+++ b/index.html
@@ -81,10 +81,7 @@
 
         <div class="btn-box">
           <span class="animate" style="--i: 5"></span>
-          <a
-            href="https://drive.google.com/file/d/19hKoIiHXjQxQifAcSpBwlbw7drCGMJ-l/view?usp=drive_link"
-            target="_blank"
-            class="btn"
+          <a href="./resume/resume.pdf" download="Ashok's_Resume" class="btn"
             >Resume</a
           >
           <a
