--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
 
         <div class="btn-box">
           <span class="animate" style="--i: 5"></span>
-          <a href="./resume/resume.pdf" download="Ashok's_Resume" class="btn"
+          <a
+            href="https://drive.google.com/file/d/1LhNIh6n9swf1CFzAKvINFNexnRxWCEdl/view?usp=sharing"
+            target="_blank"
+            class="btn"
             >Resume</a
           >
           <a
