--- a/index.html
+++ b/index.html
@@ -206,6 +206,46 @@
                 </p>
               </div>
             </div>
+
+            <div class="education-content">
+              <div class="content">
+                <div class="year">
+                  <i class="bx bxs-calendar"></i> 2022 - 2023
+                </div>
+                <h3 id="certificate">Certificates</h3>
+                <ul>
+                  <li class="certificate-list">
+                    <span
+                      >The Ultimate React Course 2023: React, Redux & More</span
+                    >
+                    <a
+                      href="https://www.udemy.com/certificate/UC-54f4a420-ba10-4a79-9506-177b9b8183ca/"
+                      target="_blank"
+                      ><i class="bx bx-link-external"></i> View</a
+                    >
+                  </li>
+                  <li class="certificate-list">
+                    <span
+                      >The Complete JavaScript Course 2023: From Zero to
+                      Expert</span
+                    >
+                    <a
+                      href="https://www.udemy.com/certificate/UC-13ae5b35-b770-4065-a761-01f5bd4114a7/"
+                      target="_blank"
+                      ><i class="bx bx-link-external"></i> View</a
+                    >
+                  </li>
+                  <li class="certificate-list">
+                    <span>Full stack developer Bootcamp 2022</span>
+                    <a
+                      href="https://www.udemy.com/certificate/UC-b8f454f0-20b7-477a-9bfc-1ab80e0c4f14/"
+                      target="_blank"
+                      ><i class="bx bx-link-external"></i> View</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
             <span class="animate scroll" style="--i: 3"></span>
           </div>
         </div>
